--- a/week19/src/global.css
+++ b/week19/src/global.css
@@ -5,6 +5,7 @@
   font-family: "Vazirmatn", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-color: rgba(247, 248, 248, 1);
 }
 
 * {
