--- a/week19/src/components/confirmModal.module.css
+++ b/week19/src/components/confirmModal.module.css
@@ -133,7 +133,7 @@
   border: 2px solid #e4e4e4;
   background: white;
   color: #666;
-  border-radius: 8px;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 14px;
   transition: all 0.3s;
@@ -163,6 +163,38 @@
   opacity: 0.6;
   cursor: not-allowed;
 }
+
+.deleteModalBody {
+  padding: 20px;
+  text-align: center;
+  direction: rtl;
+}
+
+.deleteModalBody p {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.deleteButton {
+  background: rgba(244, 63, 94, 1);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background 0.3s ease;
+}
+
+.deleteButton:hover {
+  background: #c82333;
+}
+
+.deleteButton:disabled {
+  background: #6c757d;
+  cursor: not-allowed;
+}
+
 
 @media (max-width: 768px) {
   .modalContent {
