--- a/week19/src/components/confirmModal.module.css
+++ b/week19/src/components/confirmModal.module.css
@@ -9,6 +9,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .modalContent {
@@ -79,15 +81,17 @@
 
 .input {
   padding: 12px 16px;
-  border: 2px solid #e4e4e4;
+  border: none;
   border-radius: 8px;
   font-size: 14px;
   transition: border-color 0.3s;
+  background-color: rgba(242, 242, 242, 1);
 }
 
 .input:focus {
+  border: 2px solid #e4e4e4;
   outline: none;
-  border-color: #007bff;
+  border-color: rgba(85, 163, 240, 1);
 }
 
 .inputError {
@@ -195,18 +199,17 @@
   cursor: not-allowed;
 }
 
-
 @media (max-width: 768px) {
   .modalContent {
     width: 95%;
     margin: 20px;
     padding: 20px;
   }
-  
+
   .modalActions {
     flex-direction: column;
   }
-  
+
   .cancelButton,
   .submitButton {
     width: 100%;
