--- a/week19/src/pages/signupPage.module.css
+++ b/week19/src/pages/signupPage.module.css
@@ -1,3 +1,9 @@
+header h1 {
+  margin: 50px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 31px;
+}
 .formContainer {
   margin: 50px auto;
   padding: 45px 0px;
